# project-creator

./: README.md  cxxlib.sh  easePlot.sh  make_plot.sh
include/: class.sh  cmake.sh  color.sh  cxx_project.sh  function.sh  gnuplot.sh  main.sh  utilities.sh
template/: CMakeLists.txt  class.cc  class.h  main_1.cc  main_2.cc  title.txt  title_cxxlib.txt  title_ease_plot.txt
